# alphaquant_ai_agent

Alphaquant_AI_agent/: AgentCard.json  CUSTOMIZE.md  Dockerfile  README (1).md  alphaquant_demo (2).html  docker-compose.yml  pyproject.toml
Alphaquant_AI_agent/src/: __main__.py  agent_toolset.py  openai_agent.py  openai_agent_executor.py
